--- a/apps/toy-stories/src/index.html
+++ b/apps/toy-stories/src/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>ToyStories</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <toy-stories-root></toy-stories-root>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>ToyStories</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <toy-stories-root></toy-stories-root>
+</body>
+
 </html>
